--- a/tutorials/csharp-tutorial/src/CSharpTutorialDemo/CSharpTutorialDemo/CSharpTutorialDemo.csproj
+++ b/tutorials/csharp-tutorial/src/CSharpTutorialDemo/CSharpTutorialDemo/CSharpTutorialDemo.csproj
@@ -2,7 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.1" />
+  </ItemGroup>
 
 </Project>
